16-10-2025/currency-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: currency-service
spec:
  type: NodePort
  selector:
    app: currency-app
  ports:
  - port: 80
    targetPort: 5000
